# Interlink

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Checklist.md  Dockerfile  Interlink_Research.tex  LICENSE  PROJECT_DESCRIPTION.md  README.md  RESEARCH.tex  deny.toml  interlink-zk-interoperability-whitepaper.tex  release.ps1  slither_report.json  slither_report_v2.json
.cargo/: audit.toml
.claude/: settings.local.json
.github/: README.md
.github/workflows/: README.md  Unified_Architecture.yml  ci.yml  daily-security-builds.yml  website.yml
circuits/: Cargo.toml  README.md
circuits/src/: README.md  config.rs  consensus.rs  lib.rs  merkle.rs  recursion.rs
circuits/tests/: README.md
contracts/: README.md
contracts/cosmos/: Cargo.toml  README.md
contracts/cosmos/src/: README.md  contract.rs  error.rs  lib.rs  msg.rs  state.rs
contracts/evm/: .gitignore  README.md  foundry.toml
contracts/evm/cache/: solidity-files-cache.json
contracts/evm/script/: Deploy.s.sol  DeployAndInit.s.sol  DeployL2.s.sol
contracts/evm/src/: IInterlinkRouter.sol  InterlinkGateway.sol  README.md
contracts/evm/test/: InterlinkGateway.t.sol
contracts/solana/: Anchor.toml  Cargo.toml  README.md
contracts/solana/interlink-hub/: Anchor.toml
contracts/solana/interlink-hub/programs/interlink-hub/: Cargo.toml
contracts/solana/interlink-hub/programs/interlink-hub/src/: lib.rs
contracts/solana/interlink-hub/tests/: interlink-hub.ts
contracts/solana/src/: README.md  lib.rs
docs/: API_REFERENCE.md  ARCHITECTURE.md  COMPARISON.md  README.md  RUNBOOK.md  SECURITY_GUARANTEES.md  SOLANA_OPERATIONS.md  ZK_CIRCUITS_V1.md
interlink-core/: Cargo.toml  README.md  error.txt
interlink-core/src/: README.md  circuit.rs  lib.rs  main.rs  network.rs  relayer.rs  types.rs
relayer/: Cargo.toml  README.md
relayer/src/: README.md  amm.rs  atomic.rs  audit_trail.rs  batch.rs  benchmarks.rs  bitcoin_spv.rs  blob_space.rs  bounty.rs  byzantine_bridge.rs  circuitbreaker.rs  cosmos.rs  defi_integration.rs  enterprise.rs  events.rs  explorer.rs  fee.rs  finality.rs  formal_verification.rs  gas.rs  governance.rs  http_api.rs  intent.rs  kyc.rs  lending.rs  lib.rs  liquidity_mining.rs  listener.rs  main.rs  metrics.rs  mev.rs  multisig.rs  network_opt.rs  nft_bridge.rs  nonce.rs  polygon.rs  privacy.rs  proof_batching.rs  proof_binding.rs  proof_perf.rs  (+19 more)
relayer/tests/: checklist_features.rs  integration.rs  security.rs
research/: Interlink_Research.tex
scripts/: solana_helper.ps1
sdk/: jest.config.js  package-lock.json  package.json
sdk/src/: client.test.ts  client.ts  index.ts  types.ts
website/: index.html  package-lock.json  package.json  vite.config.js
website/src/: App.jsx  index.css
website/src/pages/: Bridge.jsx  Documentation.jsx  Explorer.jsx  Home.jsx
