[package]
name = "interlink-core"
version = "0.3.0"
edition = "2021"

[dependencies]
# ZK Proving
halo2_proofs = "0.3.0"

# Async Runtime
tokio = { version = "1.0", features = ["full", "tracing"] }
futures = "0.3"

# Networking & serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# Blockchain SDKs
ethers-core = { version = "2.0.14" }
ethers-providers = { version = "2.0.14", features = ["ws"] }
ethers-contract = { version = "2.0.14" }
reqwest = { version = "0.11", features = ["json"] }

[dev-dependencies]
# For testing circuits
halo2_proofs = { version = "0.3.0", features = ["dev-graph"] }
