[package]
name = "interlink-core"
version = "0.3.0"
edition = "2021"

[dependencies]
# ZK Proving
halo2_proofs = { version = "0.3.0", features = ["multicore"] }
halo2curves = "0.1.0"
ff = "0.13"

# Async Runtime
tokio = { version = "1.32", features = ["full", "tracing"] }
futures = "0.3"

# Networking & serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# Crypto & PRNG
rand = "0.8"
rand_core = { version = "0.6", features = ["getrandom"] }

# Blockchain SDKs
ethers-core = { version = "2.0.14" }
ethers-providers = { version = "2.0.14", features = ["ws"] }
ethers-contract = { version = "2.0.14" }
reqwest = { version = "0.11", features = ["json"] }
base64 = "0.21"
ed25519-dalek = "2.0"

[dev-dependencies]
# For testing circuits
halo2_proofs = { version = "0.3.0", features = ["dev-graph", "multicore"] }
