[package]
name = "relayer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "relayer"
path = "src/main.rs"

[[bin]]
name = "export-vk"
path = "src/bin/export_vk.rs"

[[bin]]
name = "benchmark"
path = "src/bin/benchmark.rs"

[[bin]]
name = "load-test"
path = "src/bin/load_test.rs"

[dependencies]
futures = "0.3"
interlink-core = { path = "../interlink-core" }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
ethers-core = "2.0.14"
ethers-providers = { version = "2.0.14", features = ["ws"] }
sha2 = "0.10"
sha3 = "0.10"
ed25519-dalek = "2.0"
bs58 = "0.5"
base64 = "0.21"
rand = "0.8"

# Groth16 proving (BN254)
ark-bn254 = "0.4"
ark-groth16 = "0.4"
ark-relations = "0.4"
ark-ff = "0.4"
ark-ec = "0.4"
ark-serialize = "0.4"
ark-std = "0.4"
ark-snark = "0.4"
