[package]
name = "cosmos-gateway"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[workspace]

[dependencies]
cosmwasm-std = { version = "1.5.0", features = ["staking"] }
cosmwasm-schema = "1.5.0"
cw-storage-plus = "1.2.0"
schemars = "0.8"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
cosmwasm-std = { version = "1.5.0", features = ["staking"] }
