[package]
name = "interlink-hub"
version = "0.1.0"
description = "High-Performance ZK-SNARK Hub for InterLink Protocol"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "interlink_hub"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"
solana-program = "=1.18.26"
